fetch details of user profile
