# docs/swagger.json
@@ -112,6 +112,35 @@
                     }
                 }
             }
+        },
+        "/profile": {
+            "get": {
+                "description": "This function retrieves the student's profile based on the provided Authorization token and\nfetches the student's demo session details. It responds with a JSON object containing the student's information\nand demo session details.",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Student"
+                ],
+                "summary": "This controller will handles to fetch profile of students.",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "user_id",
+                        "name": "UserID",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     }
 }
